Restore Iris Voxy rendering on Minecraft 1.20.6